platform/components/runners/buildkit-cache/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: build-cache
spec:
  podSelector:
    matchLabels:
      actions.github.com/scale-set-name: buildkit-amd64
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: build-cache
      podSelector:
        matchLabels:
          app: garage
    ports:
    - protocol: TCP
      port: 3900
